2002-10-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdlib/calloc.c: new file.
	* include/stdlib.h libc/stdlib/Makefile.am: add calloc().

2002-10-11  Theodore A. Roth  <troth@openavr.org>

	* include/errno.h: Add dox.
	* include/stdlib.h: Add xref to errno.

2002-10-11  Theodore A. Roth  <troth@openavr.org>

	* doc/api/main_page.dox: Updated.

2002-10-11  Theodore A. Roth  <troth@openavr.org>

	* include/string.h: Add note about flash based strings.
	* include/avr/pgmspace.h: Add note about ram based strings.

2002-10-11  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/api/Makefile.am (DEMO_LIBS): Only grab the first lib found.

2002-10-10  Theodore A. Roth  <troth@verinet.com>

	* doc/TODO: Removed ctype.h.
	* include/ctype.h: Add dox comments.

2002-10-10  Theodore A. Roth  <troth@verinet.com>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/api/acknowledge.dox: Add cross references.

2002-10-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/using-tools.dox: New file.
	* doc/examples/demo/demo.dox: Change title.
	* doc/api/faq.dox: describe register usage.
	* doc/register-usage.txt: file gone, it's in the
		FAQ now.
	* doc/api/Makefile.am: wire the new using-tools.dox
		into the make infrastructure.

2002-10-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo/demo.fig: Introduce R2.
	* doc/examples/demo/demo.dox: Document R2.

2002-10-04  Theodore A. Roth  <troth@verinet.com>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/api/faq.dox: Add io port passing entry.

2002-10-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo/demo.dox: Fix Ted's FIXME.

2002-10-01  Theodore A. Roth  <troth@verinet.com>

	* doc/TODO: Updated.
	* doc/api/Makefile.am: Add using-avrprog.dox.
	* doc/api/tools-install.dox: Add ref to using-avrprog.dox.
	* doc/api/using-avrprog.dox: New file.

2002-10-01  Marek Michalkiewicz  <marekm@amelek.gda.pl>
